M2_TIIR_2018_2019/IFI/kube/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - name: http
    targetPort: 80
    port: 81
  selector:
    app: guestbook
    tier: frontend
